--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://Chieko3020.github.io
+url: https://Chieko3020.github.io
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -104,6 +104,7 @@ deploy:
   type: git
   repo: https://github.com/Chieko3020/Chieko3020.github.io.git
   branch: gh-pages  # 部署到 gh-pages 分支
+  message: "Auto deploy: {{ now('YYYY-MM-DD HH:mm:ss') }}"
 feed:
   enable: true
   type: atom
