--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           cache: 'npm'      
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Clean cache and generate static files
         run: |
