--- a/_config.reimu.yml
+++ b/_config.reimu.yml
@@ -493,17 +493,17 @@ clipboard:
 
 # show categories card on home page
 home_categories:
-  enable: false
+  enable: true
   content:
-    - categories: # string (single-layer category) or array (multi-layer category)
+    - categories: "——不可解的它的一切—— 说人话不就是“关于网站”吗" # string (single-layer category) or array (multi-layer category)
       cover: # empty means random cover
-    - categories:
+    - categories: "—只属于你的赤石小妙招— “看起来有用，实际上没用”"
       cover:
 
 # whether to display the notification when the article is outdated
 outdate:
-  enable: false
-  daysAgo: 180 # The number of days after which the article is considered outdated
+  enable: true
+  daysAgo: 30 # The number of days after which the article is considered outdated
   message:
     en: This article was last updated on {time}. Please note that the content may no longer be applicable.
     zh-CN: 本文最后更新于 {time}，请注意文中内容可能已不适用。
@@ -542,13 +542,13 @@ moe_icp:
 
 # show the copyright below each article
 article_copyright:
-  enable: false
+  enable: true
   content:
     author: true
     link: true
-    title: false
-    date: false
-    updated: false
+    title: true
+    date: true
+    updated: true
     license: true
     license_type: by-nc-sa # https://creativecommons.org/licenses
 
