--- a/_config.yml
+++ b/_config.yml
@@ -128,3 +128,125 @@ markdown_it_plus:
   typographer:
   quotes: “”‘’
   rawLaTeX: false # newly added
+
+
+OhMyLive2d:
+  enable: false
+  CDN: https://registry.npmmirror.com/oh-my-live2d/latest/files
+  option:
+    # importType: 'cubism2' #  导入类型, 默认使用全量导入: complete , 可选值: complete, cubism2, cubism5
+    libraryUrls: # 自定义 Cubism SDK 外部资源地址
+      complete: https://registry.npmmirror.com/oh-my-live2d/latest/files/lib/complete.js
+      cubism2: https://registry.npmmirror.com/oh-my-live2d/latest/files/lib/cubism2.js
+      cubism5: https://registry.npmmirror.com/oh-my-live2d/latest/files/lib/cubism5.js
+    # menus:
+    # items: |
+    #   (defaultItems)=>{
+    #    return [
+    #      ...defaultItems,
+    #      {
+    #        id: 'github',
+    #        icon: 'github-fill',
+    #        title: '我的github',
+    #        onClick: ()=>window.open('https://github.com/hacxy')
+    #      }
+    #    ]
+    #   }
+
+    # items:
+    #   - id: 'github'
+    #     icon: 'github-fill'
+    #     title: '我的github'
+    #     onClick: ()=>window.open('https://github.com/hacxy')
+
+    mobileDisplay: true # 是否在移动端显示
+    models:
+      - path: "l2dModals/37/37.model3.json"
+        mobilePosition: [-10, 23] # 移动端时模型在舞台中的位置。 默认值: [0,0] [横坐标, 纵坐标]
+        mobileScale: 0.1 # 移动端时模型的缩放比例 默认值: 0.1
+        mobileStageStyle: # 移动端时舞台的样式
+          width: 180
+          height: 166
+        motionPreloadStrategy: IDLE # 动作预加载策略 默认值: IDLE 可选值: ALL | IDLE | NONE
+        position: [-10, 35] # 模型在舞台中的位置。 默认值: [0,0] [横坐标, 纵坐标]
+        scale: 0.15 # 模型的缩放比例 默认值: 0.1
+        # showHitAreaFrames: false # 是否显示点击区域 默认值: false
+        stageStyle:
+          width: 250
+          height: 250
+      - path: "l2dModals/evernight/evernight.model3.json"
+        mobilePosition: [-10, 23] # 移动端时模型在舞台中的位置。 默认值: [0,0] [横坐标, 纵坐标]
+        mobileScale: 0.1 # 移动端时模型的缩放比例 默认值: 0.1
+        mobileStageStyle: # 移动端时舞台的样式
+          width: 180
+          height: 166
+        motionPreloadStrategy: IDLE # 动作预加载策略 默认值: IDLE 可选值: ALL | IDLE | NONE
+        position: [-10, 35] # 模型在舞台中的位置。 默认值: [0,0] [横坐标, 纵坐标]
+        scale: 0.15 # 模型的缩放比例 默认值: 0.1
+        # showHitAreaFrames: false # 是否显示点击区域 默认值: false
+        stageStyle:
+          width: 250
+          height: 250
+    parentElement: document.body #为组件提供一个父元素，如果未指定则默认挂载到 body 中
+    primaryColor: 'var(--btn-bg)' # 主题色 支持变量
+    sayHello: false # 是否在初始化阶段打印项目信息
+    tips:
+      style:
+        width: 230
+        height: 120
+        left: calc(50% - 20px)
+        top: -100px
+      mobileStyle:
+        width: 180
+        height: 80
+        left: calc(50% - 30px)
+        top: -100px
+      idleTips:
+        interval: 15000
+        # message:
+        #   - 你好呀~
+        #   - 欢迎来到我的小站~
+        # 自定义提示语 需要 引入 axios 库 ,也可以使用其他方法
+        message: |
+          function(){
+            return axios.get('https://v1.hitokoto.cn?c=i')
+              .then(function (response) {
+                return response.data.hitokoto ;
+              })
+              .catch(function (error) {
+                console.error(error);
+              });
+          }
+        # wordTheDay: true
+        # 自定义  https://v1.hitokoto.cn  数据
+        # wordTheDay: |
+        #   function(wordTheDayData){
+        #     return `${wordTheDayData.hitokoto}    by.${wordTheDayData.from}`;
+        #   }
+  # then: |
+  #   (oml2d)=>{
+  #      setTimeout(() => {
+  #     oml2d.tipsMessage('hello world', 3000, 10);
+  #   }, 8000);
+  #   }
+
+  jsdelivr_cdn:
+  # 如果 use_cdn 被设置为false， 则该插件不会工作
+  use_cdn: true 
+  
+  # 如果 deploy_when_generating 被设置为true, 那么静态资源目录将会在每次使用'hexo g'命令生成hexo项目的时候被推送到github。如果被设置为false，则只会在deploy时被推送。你也可以在该标志设置为false时使用'hexo g cdn'命令手动推送到github。
+  deploy_when_generating: true
+  
+  # cdn_url_prefix是jsdelivr上你的github仓库(这是专门用来作CDN加速的静态资源仓库而非原hexo项目的部署仓库)的对应网址，应该形如 https://cdn.jsdelivr.net/gh/<username for github>/<assets repo name>/
+  cdn_url_prefix: https://cdn.jsdelivr.net/gh/Chieko3020/Chieko3020.github.io@main/ # <你在github上的静态资源仓库对应的jsdelivr网址>
+  
+  # git_repo_url是你github上的静态资源仓库的url，应该形如git@github.com:<username>/<repo>.git
+  git_repo_url: git@github.com:Chieko3020/Chieko3020.github.io.git  # <github上的静态资源仓库的url>
+  
+  # 你可以使用Github token来验证推送你的资源仓库。如果不想使用token验证，那么只要将token值设置为空或者注释掉这一行即可。我们不推荐将token直接写在_config.yml中。我们推荐使用环境变量储存token，只要将token值的第一个字符设置为'$',该插件就会从该环境变量中读取。例如你可以使用'$GITHUB_TOKEN'环境变量来储存token。当使用token验证时，必须通过http(s)连接的方式。更多关于Github token的信息可以去 https://help.github.com/articles/creating-a-personal-access-token-for-the-command-line 内查看。
+  token: <your github auth token, optional>
+  
+  # asset_dirs是可选的需要上传至github静态资源仓库的目录列表，其中的每一个资源目录应该是相对于你的hexo项目目录的路径， 例如 assets 或者 source/assets 或者 themes/<theme name>/assets 。如果你只是想用CDN加速你的post中的图片，则可以不设置asset_dirs
+  asset_dirs:
+    - [存放静态资源的目录]
+    - [另一个存放静态资源的目录]
