--- a/source/_data/covers.yml
+++ b/source/_data/covers.yml
@@ -1,11 +1,11 @@
-- /images/104391353_p0.jpg
-- /images/2024_12_15_03_12_35_5085604.jpeg
-- /images/2024_12_17_13_16_41_3892866.jpeg
-- /images/2024_12_23_15_59_02_655519.jpeg
-- /images/2025_04_29_22_01_59_8460007.jpeg
-- /images/2025_05_01_00_17_30_1647196.jpeg
-- /images/2025_05_01_00_47_03_3419792.jpeg
-- /images/31A_x4_g4A.jpg
-- /images/93588597_p0_master1200.jpg
-- /images/illust_72300844_20200720_031307.jpg
-- /images/Last3_epilogue.png
+- /images/104391353_p0.webp
+- /images/2024_12_15_03_12_35_5085604.webp
+- /images/2024_12_17_13_16_41_3892866.webp
+- /images/2024_12_23_15_59_02_655519.webp
+- /images/2025_04_29_22_01_59_8460007.webp
+- /images/2025_05_01_00_17_30_1647196.webp
+- /images/2025_05_01_00_47_03_3419792.webp
+- /images/31A_x4_g4A.webp
+- /images/93588597_p0_master1200.webp
+- /images/illust_72300844_20200720_031307.webp
+- /images/Last3_epilogue.webp
