--- a/_config.reimu.yml
+++ b/_config.reimu.yml
@@ -149,7 +149,7 @@ tagcloud_limits:
 # Archive behavior
 only_show_capsule_in_index: false # If you have hugo amounts of tags and categories, you can set this to true to only show the capsule in the index page for better performance
 
-show_update_time: false # If you want to show the update time, please set this to true
+show_update_time: true # If you want to show the update time, please set this to true
 
 # Summary content
 summary:
@@ -290,7 +290,7 @@ comment:
   # comment system title
   title:
     en: Leave a comment
-    zh-CN: 说些什么吧！
+    zh-CN: 
     zh-TW: 說些什麼吧！
     ja: コメントを残す
     pt-BR: Deixe um comentário
@@ -316,8 +316,9 @@ valine:
 # https://waline.js.org/
 # version 2.15.8
 waline:
-  enable: false
-  serverURL:
+  enable: true
+  serverURL: https://chieko3020xyz-comments.vercel.app/
+  # https://chieko3020xyz-comments.vercel.app/ui/register 评论管理
   # lang: zh-CN # deprecated, use html.lang instead
   locale: {} # https://waline.js.org/guide/features/i18n.html#%E8%87%AA%E5%AE%9A%E4%B9%89%E8%AF%AD%E8%A8%80
   emoji:
@@ -396,7 +397,7 @@ algolia_search:
     per_page: 10
 
 generator_search:
-  enable: false
+  enable: true
   field: post
   content: true
 
@@ -493,13 +494,13 @@ clipboard:
 
 # show categories card on home page
 home_categories:
-  enable: false
+  enable: true
   content:
-    - categories: 不可解的它的一切 ——说人话不就是「关于网站」吗 
+    - categories: "不可解的它的一切 ———“不就是「关于网站」吗”"
     # string (single-layer category) or array (multi-layer category)
       cover: 
     # empty means random cover
-    - categories: 只属于你的赤石小妙招 ——看似有用实则没用
+    - categories: "只属于你的小妙招 ———“看似有用实则没用QAQ”"
       cover:
 
 # whether to display the notification when the article is outdated
@@ -544,14 +545,14 @@ moe_icp:
 
 # show the copyright below each article
 article_copyright:
-  enable: false
+  enable: true
   content: 
-    author: 
-    link: 
-    title: 
-    date: 
-    updated: 
-    license: 
+    author: true
+    link: true
+    title: true
+    date: true
+    updated: true
+    license: true
     license_type: by-nc-sa # https://creativecommons.org/licenses
 
 # Back To Top
