--- a/_config.reimu.yml
+++ b/_config.reimu.yml
@@ -640,7 +640,7 @@ player:
       id: 2700441775
       server: netease
       type: playlist
-      auto: https://music.163.com/#/playlist?id=2700441775
+      auto: https://music.163.com/playlist?id=14424322349
 
 ########################################
 # pangu.js
