--- a/_config.yml
+++ b/_config.yml
@@ -138,7 +138,7 @@ markdown_it_plus:
 
 # _config.yml
 OhMyLive2d:
-  enable: true
+  enable: false
   CDN: https://registry.npmmirror.com/oh-my-live2d/latest/files
   # CDN: https://registry.npmmirror.com/oh-my-live2d/0.13/files/dist/index.min.js
   option:
