--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: Chieko3020 | Nostalgia
-subtitle: "過ぎさる3月の中を歩く君へ そして同じ春に立ち止まる私へ <br> 致渐逝三月里迈步前进的你 然后致同一个春天里停步不前的我"
-description: '这并非约束我的规则 <br> 而是我对她的礼仪'
+subtitle: "過ぎさる3月の中を歩く君へ<br>そして同じ春に立ち止まる私へ<br>致渐逝三月里迈步前进的你<br>然后致同一个春天里停步不前的我"
+description: '这并非约束我的规则<br>而是我对她的礼仪'
 keywords: 
 author: Chieko3020
 language: zh-CN
