--- a/_config.reimu.yml
+++ b/_config.reimu.yml
@@ -541,7 +541,7 @@ icp:
 
 # 萌国 ICP 备案
 moe_icp:
-  icpnumber: # 萌国ICP备案号
+  icpnumber: 萌ICP备20258787号
 
 # show the copyright below each article
 article_copyright:
