--- a/source/_data/covers.yml
+++ b/source/_data/covers.yml
@@ -1,4 +1,10 @@
+- /images/1-1.webp
+- /images/1-8.webp
+- /images/1-ZR.webp
 - /images/104391353_p0.webp
+- /images/2-1.webp
+- /images/2-8.webp
+- /images/2-D.webp
 - /images/2024_12_15_03_12_35_5085604.webp
 - /images/2024_12_17_13_16_41_3892866.webp
 - /images/2024_12_23_15_59_02_655519.webp
@@ -6,6 +12,25 @@
 - /images/2025_05_01_00_17_30_1647196.webp
 - /images/2025_05_01_00_47_03_3419792.webp
 - /images/31A_x4_g4A.webp
+- /images/4-1.webp
+- /images/4-7.webp
+- /images/7-6.webp
 - /images/93588597_p0_master1200.webp
 - /images/illust_72300844_20200720_031307.webp
 - /images/Last3_epilogue.webp
+- /images/Still_001_001.webp
+- /images/Still_002_001.webp
+- /images/Still_020_001.webp
+- /images/Still_030_001.webp
+- /images/Still_040_001.webp
+- /images/Still_050_001.webp
+- /images/Still_120_001.webp
+- /images/Still_190_001.webp
+- /images/Still_250_001.webp
+- /images/Still_290_001.webp
+- /images/Still_350_001.webp
+- /images/Still_360_001.webp
+- /images/Still_370_002.webp
+- /images/Still_380_001.webp
+- /images/Still_400_002.webp
+- /images/V-5_silent.webp
