--- a/_config.reimu.yml
+++ b/_config.reimu.yml
@@ -635,11 +635,11 @@ player:
     # https://github.com/metowolf/MetingJS
     # if you want to use meting, please enable aplayer first
     enable: true
-    meting_api: https://www.chieko3020.xyz/meting/api?server=netease&type=playlist&id=14424322349 # custom api
+    meting_api: https://music-api.chieko3020.xyz/  # custom api
     options:
-      id: 2700441775
       server: netease
       type: playlist
+      id: 2700441775
       auto: https://music.163.com/playlist?id=14424322349
 
 ########################################
