--- a/_config.reimu.yml
+++ b/_config.reimu.yml
@@ -621,7 +621,7 @@ player:
     # https://github.com/DIYgod/APlayer
     enable: true
     options:
-      audio:  
+      audio: 
       fixed: false
       autoplay: false
       loop: 'all'
@@ -630,12 +630,14 @@ player:
       volume: 0.3
       mutex: true
       listFolded: false
-      lrcType: 0
+      lrcType: 1
   meting:
     # https://github.com/metowolf/MetingJS
     # if you want to use meting, please enable aplayer first
     enable: true
-    meting_api: https://music-api.chieko3020.xyz/?server=netease&type=playlist&id=14424322349 # custom api
+    meting_api: https://api.qijieya.cn/meting/?server=netease&type=playlist&id=14424322349 # custom api
+    # 个人api  https://music-api.chieko3020.xyz/api?server=netease&type=playlist&id=14424322349
+    
     options:
       server: netease
       type: playlist
