--- a/_config.yml
+++ b/_config.yml
@@ -214,8 +214,50 @@ OhMyLive2d:
         left: calc(50% - 30px)
         top: -100px
       idleTips:
-        interval: 15000
-        # message:
+        interval: 3000
+        message:
+            - "你好，开拓者。欢迎入职星穹列车，我是三月七，星穹列车的乘员，也是你的同事。现在，请先拍摄入职照…瞧把你吓的，咱是在开玩笑啦~"
+            - "名字是我自己取的，大家也叫我三月、小三月…你呢？你想叫我什么？"
+            - "我的过去，或许不在从前，而是在我的未来里。所以我一定会一站站走下去，哪怕有一天…没有列车。"
+            - "果汁…一说就觉得馋，一馋就忒想喝，一喝就…停不下来……"
+            - "要是没人和我聊天，我就闷得要命。但在列车上的时候，姬子很忙，杨叔很忙，帕姆很忙，丹恒倒是不忙，可他不喜欢聊天……"
+            - "每次坐在书桌前整理完相册，抬头看向窗外，即使那一幕已经见过千遍万遍，我总是想再拍一张照片…现在咱能坐在列车里，像这样看着星星，真的很幸福。"
+            - "我平时很喜欢仙舟幻戏嘛，心里一直有点剑侠情结。等我真正开始学剑之后，才发现比起幻戏里飞天遁地的大侠，还是教我一招一式的两位小师父更厉害！"
+            - "即使看起来很「黑暗」的料理，也要拿出「开拓」的精神来面对！但，实话实说，砂鳗冻和姬子泡的咖啡真不太好……"     
+            - "丹恒…他在我之前上的车，从没透露过自己的来历…你要是有机会，也帮我打探打探？"
+            - "美丽的姬子姐姐，成熟，可靠，又优雅，还是列车的领航员…以后，我也可以成为那样的大人吧！不过咱现在这样也很好~"     
+            - "听说杨叔曾经是秘密组织的首领，拯救过星球，当过老师，还画过动画的原画！哎，简直是外星人了……"      
+            - "列车长就是最棒的！"
+            - "即使知道了他的神秘过去，他还是我们认识的那个丹恒呀！"       
+            - "彦卿师父的教学风格非常严谨，也一直把「将军当年是这么教我的」挂在嘴边…看来，景元将军教给他的，他都记得清清楚楚。"       
+            - "云璃师父的教学风格非常自由，她最常和我说的话是：「这是一种感觉！」…也许这就是「体验式教学」吧？"
+            - "如果让列车长听到那段「七休日」的主张，不知道会是什么反应呀。"
+            - "翁法罗斯的三月，是属于永夜之帷的时间…就请以「长夜月」这个称呼，将我放进你的回忆中吧。若能躲进岁月的罅隙，属于我们的时间还有很多，很多♭"
+            - "我是被遗忘的过去，是陪伴「她」的长夜。那些残酷的往事由我来代劳，而我也将看护她的前路…不惜任何代价♭"
+            - "「三月七」，多么美妙、可爱、活泼、有趣的名字，还带着一丝生日的甜蜜。所以，她应当也会喜欢「长夜月」这个称号……"
+            - "三月抵达翁法罗斯的时间坐标比你们早许多，她已如烛火熄灭，但我是那烛火的影，藏进岁月的狭间，等待你们的到来。"
+            - "它曾不断呼唤我们，依恋我们，反复落入岁月的梦境后，它也在一次次轮回中遗落了自己…我知道那种感觉，身为记忆之影，只能不断承受记忆的变化与离去，却无法创造真正的记忆这件事，有多令人惶恐。"
+            - "为什么随身带伞？因为美好的记忆就像连绵的雨，一度落在伞上又悄无痕迹地滑落…当然，也因为拍照出片。"
+            - "翁法罗斯，一颗悲剧的宝石，它与神相争的光芒吸引了那些觊觎记忆的窃贼。但那些伤痕累累的「岁月」，分明向我诉说着对「忘却」的渴求。"
+            - "我曾想象过许多「三月七」的未来，「纯美」的揽镜人，「巡猎」的游侠，甚至是「毁灭」的大君…但这些终究都是已存在「记忆」，而她总是能带来远超预期的惊喜……"
+            - "与你们一起旅行的日子，早在他身上留下了不可磨灭的烙印。"
+            - "对她来说，最好的未来，就是我可以彻底消失的那一天。"
+            - "能在我面前保持镇定的忆者，不超过一掌之数。难道说…她看过更可怕的东西？"
+            - "这位优秀的裁衣师本该为翁法罗斯编织出更多的回忆，若是我的话，一定会为自己无法亲眼见证翁法罗斯的未来而感到遗憾。"
+            - "「明天见」，无论对谁来说，都是个简单而又奢侈的愿望。"
+            - "身为王储的他，还是身为战士的他，都肩负着太多关于仇恨的记忆。但当他履行自己的职责时，却从未将过往与未来混为一谈。"
+            - "以前她种下的那片花海，是否能挺过感官之雨的洗礼呢？"
+            - "我一直都想问他一个问题：「大地兽和世界真理的真相都掉到了海里，你先捡哪个？」"
+            - "晴天让人烦躁，但不得不说，她洒下的光，连我也觉得柔和舒适。"
+            - "一个美好的谎言，的确胜过万千残酷的真相。"
+            - "每个轮回里，他都在空白的起点出发，却又总是走向同一个结局。我和三月七的命运，是否会有所不同？"
+            - "能把那位「天才」拉下马，果然不能小看擅长益智游戏的人…有机会好想和她过过招呀。"
+            - "她就像那美丽的泡沫，即便破裂时，也像弦上落下的颤音一样令人动容。"
+            - "我能看到，过往的英雄之火仍在他的心中燃烧。有这样经验丰富的前辈引路，让人放心多了。"
+            - "成熟、优雅、如玫瑰般馥郁…三月一直在努力向她学习呢。当列车驶向更深邃的星空，未来…她又会以怎样的姿态绽放？"
+            - "好想摸摸它呀。可惜，这位神秘莫测的「列车长」，一看就不会乖乖就范呢~"
+            - "何物能使生灵长存？是记忆么？不，记忆只能保存腐朽的过去。而它却甘愿成为后世的基石，为这个世界留下了生生不息的传承。"
+            - "希望我带来的这一场意料之外的「雨」，能让荒芜的岁月盛开…如她所愿的百花♭"
         #   - 你好呀~
         #   - 欢迎来到我的小站~
         # 自定义提示语 需要 引入 axios 库 ,也可以使用其他方法
