fix Aplayer lyc and l2dwg/oml2d css

--- a/_config.yml
+++ b/_config.yml
@@ -204,19 +204,35 @@ OhMyLive2d:
     initialStatus: "sleep" # 初始状态设置为休眠
     tips:
       style:
-        width: 230
-        height: 120
-        left: calc(50% - 20px)
-        top: -100px
+        width: 300
+        height: 100
+        left: calc(50% - -40px)
+        top: -80px
+        fontSize: 13px
+        lineHeight: 1.3
+        padding: 8px
+        textAlign: left
+        maxHeight: 200px
+        overflowY: auto
+        wordWrap: break-word
+        whiteSpace: normal
       mobileStyle:
-        width: 180
-        height: 80
-        left: calc(50% - 30px)
+        width: 250
+        height: 150
+        left: calc(50% - -125px)
         top: -100px
+        fontSize: 12px
+        lineHeight: 1.2
+        padding: 6px
+        textAlign: left
+        maxHeight: 150px
+        overflowY: auto
+        wordWrap: break-word
+        whiteSpace: normal
       idleTips:
-        interval: 3000
+        interval: 500
         message:
-            - "你好，开拓者。欢迎入职星穹列车，我是三月七，星穹列车的乘员，也是你的同事。现在，请先拍摄入职照…瞧把你吓的，咱是在开玩笑啦~"
+            - "你好，欢迎入职星穹列车，我是三月七，星穹列车的乘员，也是你的同事。现在，请先拍摄入职照…瞧把你吓的，咱是在开玩笑啦~"
             - "名字是我自己取的，大家也叫我三月、小三月…你呢？你想叫我什么？"
             - "我的过去，或许不在从前，而是在我的未来里。所以我一定会一站站走下去，哪怕有一天…没有列车。"
             - "果汁…一说就觉得馋，一馋就忒想喝，一喝就…停不下来……"
@@ -236,10 +252,8 @@ OhMyLive2d:
             - "我是被遗忘的过去，是陪伴「她」的长夜。那些残酷的往事由我来代劳，而我也将看护她的前路…不惜任何代价♭"
             - "「三月七」，多么美妙、可爱、活泼、有趣的名字，还带着一丝生日的甜蜜。所以，她应当也会喜欢「长夜月」这个称号……"
             - "三月抵达翁法罗斯的时间坐标比你们早许多，她已如烛火熄灭，但我是那烛火的影，藏进岁月的狭间，等待你们的到来。"
-            - "它曾不断呼唤我们，依恋我们，反复落入岁月的梦境后，它也在一次次轮回中遗落了自己…我知道那种感觉，身为记忆之影，只能不断承受记忆的变化与离去，却无法创造真正的记忆这件事，有多令人惶恐。"
             - "为什么随身带伞？因为美好的记忆就像连绵的雨，一度落在伞上又悄无痕迹地滑落…当然，也因为拍照出片。"
             - "翁法罗斯，一颗悲剧的宝石，它与神相争的光芒吸引了那些觊觎记忆的窃贼。但那些伤痕累累的「岁月」，分明向我诉说着对「忘却」的渴求。"
-            - "我曾想象过许多「三月七」的未来，「纯美」的揽镜人，「巡猎」的游侠，甚至是「毁灭」的大君…但这些终究都是已存在「记忆」，而她总是能带来远超预期的惊喜……"
             - "与你们一起旅行的日子，早在他身上留下了不可磨灭的烙印。"
             - "对她来说，最好的未来，就是我可以彻底消失的那一天。"
             - "能在我面前保持镇定的忆者，不超过一掌之数。难道说…她看过更可怕的东西？"
@@ -258,18 +272,9 @@ OhMyLive2d:
             - "好想摸摸它呀。可惜，这位神秘莫测的「列车长」，一看就不会乖乖就范呢~"
             - "何物能使生灵长存？是记忆么？不，记忆只能保存腐朽的过去。而它却甘愿成为后世的基石，为这个世界留下了生生不息的传承。"
             - "希望我带来的这一场意料之外的「雨」，能让荒芜的岁月盛开…如她所愿的百花♭"
-        #   - 你好呀~
-        #   - 欢迎来到我的小站~
-        # 自定义提示语 需要 引入 axios 库 ,也可以使用其他方法
-        # wordTheDay: true
-        # 自定义  https://v1.hitokoto.cn  数据
-        # wordTheDay: |
-        #   function(wordTheDayData){
-        #     return `${wordTheDayData.hitokoto}    by.${wordTheDayData.from}`;
-        #   }
-  then: |
-    (oml2d)=>{
-      try { localStorage.removeItem('oml2d-status') } catch(e){}
-      try { oml2d && oml2d.sleep && oml2d.sleep() } catch(e){}
-      try { oml2d && oml2d.statusBar && oml2d.statusBar.setRest && oml2d.statusBar.setRest('看板娘休息中', '💤') } catch(e){}
-    }
+    then: |
+        (oml2d)=>{
+        try { localStorage.removeItem('oml2d-status') } catch(e){}
+        try { oml2d && oml2d.sleep && oml2d.sleep() } catch(e){}
+        try { oml2d && oml2d.statusBar && oml2d.statusBar.setRest && oml2d.statusBar.setRest('看板娘休息中', '💤') } catch(e){}
+        }
